// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="rdp-root"
      data-mode="range"
      id="test"
    >
      <div
        class="rdp-months"
      >
        <nav
          aria-label=""
          class="rdp-nav"
        >
          <button
            aria-label="Go to the Previous Month"
            class="rdp-button_previous"
            type="button"
          >
            <svg
              class="rdp-chevron"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <polygon
                points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
              />
            </svg>
          </button>
          <button
            aria-label="Go to the Next Month"
            class="rdp-button_next"
            type="button"
          >
            <svg
              class="rdp-chevron"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <polygon
                points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
              />
            </svg>
          </button>
        </nav>
        <div
          class="rdp-month"
        >
          <div
            class="rdp-month_caption"
          >
            <span
              aria-live="polite"
              class="rdp-caption_label"
              role="status"
            >
              June 2020
            </span>
          </div>
          <table
            aria-label="June 2020"
            aria-multiselectable="true"
            class="rdp-month_grid"
            role="grid"
          >
            <thead>
              <tr
                class="rdp-weekdays"
              >
                <th
                  aria-label="Sunday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Su
                </th>
                <th
                  aria-label="Monday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Mo
                </th>
                <th
                  aria-label="Tuesday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Tu
                </th>
                <th
                  aria-label="Wednesday"
                  class="rdp-weekday"
                  scope="col"
                >
                  We
                </th>
                <th
                  aria-label="Thursday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Th
                </th>
                <th
                  aria-label="Friday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Fr
                </th>
                <th
                  aria-label="Saturday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Sa
                </th>
              </tr>
            </thead>
            <tbody
              class="rdp-weeks"
            >
              <tr
                class="rdp-week"
              >
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-05-31"
                  data-hidden="true"
                  data-month="2020-05"
                  data-outside="true"
                >
                  <button
                    aria-label="Sunday, May 31st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    31
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-01"
                >
                  <button
                    aria-label="Monday, June 1st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-02"
                >
                  <button
                    aria-label="Tuesday, June 2nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-03"
                >
                  <button
                    aria-label="Wednesday, June 3rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-04"
                >
                  <button
                    aria-label="Thursday, June 4th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-05"
                >
                  <button
                    aria-label="Friday, June 5th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    5
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-06"
                >
                  <button
                    aria-label="Saturday, June 6th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    6
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-07"
                >
                  <button
                    aria-label="Sunday, June 7th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    7
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-08"
                >
                  <button
                    aria-label="Monday, June 8th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    8
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-09"
                >
                  <button
                    aria-label="Tuesday, June 9th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    9
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-10"
                >
                  <button
                    aria-label="Wednesday, June 10th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    10
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-11"
                >
                  <button
                    aria-label="Thursday, June 11th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    11
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-12"
                >
                  <button
                    aria-label="Friday, June 12th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    12
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-13"
                >
                  <button
                    aria-label="Saturday, June 13th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    13
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-14"
                >
                  <button
                    aria-label="Sunday, June 14th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    14
                  </button>
                </td>
                <td
                  aria-selected="true"
                  class="rdp-day rdp-selected rdp-range_start"
                  data-day="2020-06-15"
                  data-selected="true"
                >
                  <button
                    aria-label="Monday, June 15th, 2020, selected"
                    class="rdp-day_button"
                    tabindex="0"
                    type="button"
                  >
                    15
                  </button>
                </td>
                <td
                  aria-selected="true"
                  class="rdp-day rdp-selected rdp-range_middle"
                  data-day="2020-06-16"
                  data-selected="true"
                >
                  <button
                    aria-label="Tuesday, June 16th, 2020, selected"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    16
                  </button>
                </td>
                <td
                  aria-selected="true"
                  class="rdp-day rdp-selected rdp-range_middle"
                  data-day="2020-06-17"
                  data-selected="true"
                >
                  <button
                    aria-label="Wednesday, June 17th, 2020, selected"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    17
                  </button>
                </td>
                <td
                  aria-selected="true"
                  class="rdp-day rdp-selected rdp-range_middle"
                  data-day="2020-06-18"
                  data-selected="true"
                >
                  <button
                    aria-label="Thursday, June 18th, 2020, selected"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    18
                  </button>
                </td>
                <td
                  aria-selected="true"
                  class="rdp-day rdp-selected rdp-range_end"
                  data-day="2020-06-19"
                  data-selected="true"
                >
                  <button
                    aria-label="Friday, June 19th, 2020, selected"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    19
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-20"
                >
                  <button
                    aria-label="Saturday, June 20th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    20
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-21"
                >
                  <button
                    aria-label="Sunday, June 21st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    21
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-22"
                >
                  <button
                    aria-label="Monday, June 22nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    22
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-23"
                >
                  <button
                    aria-label="Tuesday, June 23rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    23
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-24"
                >
                  <button
                    aria-label="Wednesday, June 24th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    24
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-25"
                >
                  <button
                    aria-label="Thursday, June 25th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    25
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-26"
                >
                  <button
                    aria-label="Friday, June 26th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    26
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-27"
                >
                  <button
                    aria-label="Saturday, June 27th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    27
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-28"
                >
                  <button
                    aria-label="Sunday, June 28th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    28
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-29"
                >
                  <button
                    aria-label="Monday, June 29th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    29
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-30"
                >
                  <button
                    aria-label="Tuesday, June 30th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    30
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-01"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Wednesday, July 1st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-02"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Thursday, July 2nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-03"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Friday, July 3rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-04"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Saturday, July 4th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        aria-live="polite"
        class="rdp-footer"
        role="status"
      >
        June 15th, 2020–June 19th, 2020
      </div>
    </div>
    <button
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`when a day in the range is clicked when the day is clicked again when a day in the range is clicked again should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="rdp-root"
      data-focused="2020-06-17"
      data-mode="range"
      id="test"
    >
      <div
        class="rdp-months"
      >
        <nav
          aria-label=""
          class="rdp-nav"
        >
          <button
            aria-label="Go to the Previous Month"
            class="rdp-button_previous"
            type="button"
          >
            <svg
              class="rdp-chevron"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <polygon
                points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
              />
            </svg>
          </button>
          <button
            aria-label="Go to the Next Month"
            class="rdp-button_next"
            type="button"
          >
            <svg
              class="rdp-chevron"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <polygon
                points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
              />
            </svg>
          </button>
        </nav>
        <div
          class="rdp-month"
        >
          <div
            class="rdp-month_caption"
          >
            <span
              aria-live="polite"
              class="rdp-caption_label"
              role="status"
            >
              June 2020
            </span>
          </div>
          <table
            aria-label="June 2020"
            aria-multiselectable="true"
            class="rdp-month_grid"
            role="grid"
          >
            <thead>
              <tr
                class="rdp-weekdays"
              >
                <th
                  aria-label="Sunday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Su
                </th>
                <th
                  aria-label="Monday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Mo
                </th>
                <th
                  aria-label="Tuesday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Tu
                </th>
                <th
                  aria-label="Wednesday"
                  class="rdp-weekday"
                  scope="col"
                >
                  We
                </th>
                <th
                  aria-label="Thursday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Th
                </th>
                <th
                  aria-label="Friday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Fr
                </th>
                <th
                  aria-label="Saturday"
                  class="rdp-weekday"
                  scope="col"
                >
                  Sa
                </th>
              </tr>
            </thead>
            <tbody
              class="rdp-weeks"
            >
              <tr
                class="rdp-week"
              >
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-05-31"
                  data-hidden="true"
                  data-month="2020-05"
                  data-outside="true"
                >
                  <button
                    aria-label="Sunday, May 31st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    31
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-01"
                >
                  <button
                    aria-label="Monday, June 1st, 2020"
                    class="rdp-day_button"
                    tabindex="0"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-02"
                >
                  <button
                    aria-label="Tuesday, June 2nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-03"
                >
                  <button
                    aria-label="Wednesday, June 3rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-04"
                >
                  <button
                    aria-label="Thursday, June 4th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-05"
                >
                  <button
                    aria-label="Friday, June 5th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    5
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-06"
                >
                  <button
                    aria-label="Saturday, June 6th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    6
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-07"
                >
                  <button
                    aria-label="Sunday, June 7th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    7
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-08"
                >
                  <button
                    aria-label="Monday, June 8th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    8
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-09"
                >
                  <button
                    aria-label="Tuesday, June 9th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    9
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-10"
                >
                  <button
                    aria-label="Wednesday, June 10th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    10
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-11"
                >
                  <button
                    aria-label="Thursday, June 11th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    11
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-12"
                >
                  <button
                    aria-label="Friday, June 12th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    12
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-13"
                >
                  <button
                    aria-label="Saturday, June 13th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    13
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-14"
                >
                  <button
                    aria-label="Sunday, June 14th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    14
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-15"
                >
                  <button
                    aria-label="Monday, June 15th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    15
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-16"
                >
                  <button
                    aria-label="Tuesday, June 16th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    16
                  </button>
                </td>
                <td
                  class="rdp-day rdp-focused"
                  data-day="2020-06-17"
                  data-focused="true"
                >
                  <button
                    aria-label="Wednesday, June 17th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    17
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-18"
                >
                  <button
                    aria-label="Thursday, June 18th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    18
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-19"
                >
                  <button
                    aria-label="Friday, June 19th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    19
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-20"
                >
                  <button
                    aria-label="Saturday, June 20th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    20
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-21"
                >
                  <button
                    aria-label="Sunday, June 21st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    21
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-22"
                >
                  <button
                    aria-label="Monday, June 22nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    22
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-23"
                >
                  <button
                    aria-label="Tuesday, June 23rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    23
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-24"
                >
                  <button
                    aria-label="Wednesday, June 24th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    24
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-25"
                >
                  <button
                    aria-label="Thursday, June 25th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    25
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-26"
                >
                  <button
                    aria-label="Friday, June 26th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    26
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-27"
                >
                  <button
                    aria-label="Saturday, June 27th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    27
                  </button>
                </td>
              </tr>
              <tr
                class="rdp-week"
              >
                <td
                  class="rdp-day"
                  data-day="2020-06-28"
                >
                  <button
                    aria-label="Sunday, June 28th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    28
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-29"
                >
                  <button
                    aria-label="Monday, June 29th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    29
                  </button>
                </td>
                <td
                  class="rdp-day"
                  data-day="2020-06-30"
                >
                  <button
                    aria-label="Tuesday, June 30th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    30
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-01"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Wednesday, July 1st, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-02"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Thursday, July 2nd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-03"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Friday, July 3rd, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td
                  aria-hidden="true"
                  class="rdp-day rdp-hidden rdp-outside"
                  data-day="2020-07-04"
                  data-hidden="true"
                  data-month="2020-07"
                  data-outside="true"
                >
                  <button
                    aria-label="Saturday, July 4th, 2020"
                    class="rdp-day_button"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        aria-live="polite"
        class="rdp-footer"
        role="status"
      >
        Please pick the first day.
      </div>
    </div>
    <button
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;
